first revision for miniclock and knob controllers

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-pico-devkitm-2]
+[env]
 platform = espressif32
-board = esp32-pico-devkitm-2
 framework = arduino
+lib_deps = 
+    fastled/FastLED @ ~3.9.12
+    https://github.com/claws/BH1750/
+    adafruit/Adafruit INA219
+
+[env:esp32-mini-1]
+  board = featheresp32
+  upload_protocol = esptool
+  upload_speed = 921600
+  monitor_speed = 115200
+build_flags =
+    -DCORE_DEBUG_LEVEL=0
+
