enhanced test app with support for different patterns, led chipsets, improved menu with display support

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,8 @@ lib_deps =
     fastled/FastLED @ ~3.9.12
     https://github.com/claws/BH1750/
     adafruit/Adafruit INA219
+    olikraus/U8g2 @ ^2.35.24
+    madhephaestus/ESP32Encoder @ ^0.11.7
 
 [env:esp32-mini-1]
   board = featheresp32
